# raymarine_autopilot_pi

./: Autopilot description.odt  Autopilot.xcf  CMakeLists.txt  README.md  autopilot.fbp  bldwin-debug.sh  bldwin-rdeb.sh  raymarine_autopilot_pi-2.0.2.0-msvc-x86_64-10.0.19045.xml  tp-add.sh
.circleci/: config-API118.yml  config.yml
OLD/: CMakeLists.txt.bak
cmake/: PluginConfigure.cmake
include/: autopilot_pi.h  autopilotgui.h  autopilotgui_impl.h  icons.h
manual/: antora.yml  site.yml
manual/autopilot-rm/: antora.yml  site.yml
manual/autopilot-rm/modules/ROOT/assets/: autopilot_plugin_for_opencpn.docx
manual/autopilot-rm/modules/ROOT/pages/: autopilot-rm.adoc
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  POTFILES.in.test  ar_SA.po  autopilot_pi.pot  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de.mo  de.po  de_DE.mo  de_DE.po  de_old.mo  el_GR.po  en_GB.po  es_ES.mo  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.mo  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.mo  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  raymarine_autopilot_pi.pot  ro_RO.po  (+7 more)
src/: OneNote Inhaltsverzeichnis.onetoc2  Seasmart.cpp  autopilot_pi.cpp  autopilot_pi.h  autopilotgui.cpp  autopilotgui.h  autopilotgui_impl.cpp  autopilotgui_impl.h  icons.cpp  icons.h  ocpn_plugin.h  version.h
